RESOLVED FIXED122600
[ATK] Missing checks in returnIfWebKitAccessibleIsInvalid
https://bugs.webkit.org/show_bug.cgi?id=122600
Summary [ATK] Missing checks in returnIfWebKitAccessibleIsInvalid
Mario Sanchez Prada
Reported 2013-10-10 08:09:22 PDT
Besides checking if an ATK wrapper has been detached to determine whether it's invalid or not, we also need to check if the coreObject's document is null, since that might have been invalidated even before we called any function of the ATK API. Actually, this additional check can save us from calling updateBackingStore, so bonus points
Attachments
Patch proposal (3.09 KB, patch)
2013-10-10 08:15 PDT, Mario Sanchez Prada
no flags
Radar WebKit Bug Importer
Comment 1 2013-10-10 08:09:45 PDT
Mario Sanchez Prada
Comment 2 2013-10-10 08:15:08 PDT
Created attachment 213886 [details] Patch proposal
chris fleizach
Comment 3 2013-10-10 08:51:50 PDT
Comment on attachment 213886 [details] Patch proposal View in context: https://bugs.webkit.org/attachment.cgi?id=213886&action=review > Source/WebCore/accessibility/atk/WebKitAccessibleUtil.h:46 > if (webkitAccessibleIsDetached(webkitAccessible)) \ does webkitAccessibleIsDetached also check if the document is null?
Mario Sanchez Prada
Comment 4 2013-10-10 08:55:40 PDT
(In reply to comment #3) > (From update of attachment 213886 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=213886&action=review > > > Source/WebCore/accessibility/atk/WebKitAccessibleUtil.h:46 > > if (webkitAccessibleIsDetached(webkitAccessible)) \ > > does webkitAccessibleIsDetached also check if the document is null? No. Only if the wrapped object is no longer a valid AccessibilityObject
WebKit Commit Bot
Comment 5 2013-10-10 09:18:20 PDT
Comment on attachment 213886 [details] Patch proposal Clearing flags on attachment: 213886 Committed r157227: <http://trac.webkit.org/changeset/157227>
WebKit Commit Bot
Comment 6 2013-10-10 09:18:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.