[ATK] Missing checks in returnIfWebKitAccessibleIsInvalid https://bugs.webkit.org/show_bug.cgi?id=122600

Patch by Mario Sanchez Prada <mario.prada@samsung.com> on 2013-10-10
Reviewed by Chris Fleizach.

Check that the AccessibilityObject associated to the ATK wrapper
is not NULL and contains a valid reference to the document before
calling AccessibilityObject::updateBackingStore().

* accessibility/atk/WebKitAccessibleUtil.h: Add extra checks.

Canonical link: https://commits.webkit.org/140696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157227 268f45cc-cd09-0410-ab3c-d52691b4dbfc